<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txtOmerTop"

            style="@style/header_style"

            android:text="@string/today_is_the"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtOmer"
            android:text="@string/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOmerTop"
            style="@style/omer_style" />

        <TextView
            android:id="@+id/txtOmerBottom"
            style="@style/header_style"
            android:layout_marginTop="@dimen/margins"
            android:text="@string/of_the_omer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOmer" />

        <TextView
            android:id="@+id/txtCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autoLink="web"
            android:text="@string/sunrise_sunset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtCourtesy" />

        <TextView
            android:id="@+id/txtCourtesy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunset_time_courtesy_of"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtOmerStart"
            style="@style/date_style"
            android:text="@string/loading"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStartLabel" />

        <TextView
            android:id="@+id/txtOmerEnd"

            style="@style/date_style"

            android:text="@string/loading"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEndLabel" />

        <TextView
            android:id="@+id/txtStartLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins"
            android:text="@string/omer_starts_on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOmerBottom" />

        <TextView
            android:id="@+id/txtEndLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins"
            android:text="@string/counting_finishes_on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOmerStart" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>